prevent wrapping.

--- a/go/base/static/css/vumigo.less
+++ b/go/base/static/css/vumigo.less
@@ -6,7 +6,9 @@ body {
   color: #c1c1c1;
 }
 
-.container {
+.container-fluid {
+  // prevent wrapping.
+  min-width:650px;
 }
 
 .footer {
@@ -132,7 +134,7 @@ body {
       margin-left:-5px !important;
       height:100%;
 
-      button {
+      .btn {
         margin-left:-5px;
         padding-left:20px;
         padding-right:20px;
